--- a/sys/.21shrc
+++ b/sys/.21shrc
@@ -1,4 +1,24 @@
-alias cl clear c=cd PWD $PWD
-echo OK
+alias cl clear 
+alias c=cd
+alias PWD $PWD
 export HISTORY=~/.21history
-echo $HISTORY
+clear
+
+echo "       444444444   222222222222222        SSSSSSSSSSSSSSS HHHHHHHHH     HHHHHHHHH	"
+echo "      4::::::::4  2:::::::::::::::22    SS:::::::::::::::SH:::::::H     H:::::::H	"
+echo "     4:::::::::4  2::::::222222:::::2  S:::::SSSSSS::::::SH:::::::H     H:::::::H	"
+echo "    4::::44::::4  2222222     2:::::2  S:::::S     SSSSSSSHH::::::H     H::::::HH	"
+echo "   4::::4 4::::4              2:::::2  S:::::S              H:::::H     H:::::H	"	 
+echo "  4::::4  4::::4              2:::::2  S:::::S              H:::::H     H:::::H	"  
+echo " 4::::4   4::::4           2222::::2    S::::SSSS           H::::::HHHHH::::::H	"  
+echo "4::::444444::::444    22222::::::22      SS::::::SSSSS      H:::::::::::::::::H	"  
+echo "4::::::::::::::::4  22::::::::222          SSS::::::::SS    H:::::::::::::::::H	" 
+echo "4444444444:::::444 2:::::22222                SSSSSS::::S   H::::::HHHHH::::::H	" 
+echo "          4::::4  2:::::2                          S:::::S  H:::::H     H:::::H	" 
+echo "          4::::4  2:::::2                          S:::::S  H:::::H     H:::::H	" 
+echo "          4::::4  2:::::2       222222 SSSSSSS     S:::::SHH::::::H     H::::::HH "
+echo "        44::::::442::::::2222222:::::2 S::::::SSSSSS:::::SH:::::::H     H:::::::H	"
+echo "        4::::::::42::::::::::::::::::2 S:::::::::::::::SS H:::::::H     H:::::::H	"
+echo "       444444444422222222222222222222  SSSSSSSSSSSSSSS   HHHHHHHHH     HHHHHHHHH	"
+
+export PWD=${PWD:?unset var} HOME=${HOME:?unset var} PATH=$(PATH:-/bin) TERM=${TERM:-xterm-256color}
