--- a/sys/.21shrc
+++ b/sys/.21shrc
@@ -1,9 +1,10 @@
-alias cl clear 
-alias c=cd
-alias PWD $PWD
+export HOME=${HOME:-/home}
 export HISTORY=~/.21history
-clear
-
+export TERM=${TERM:-xterm-256color}
+alias cl /usr/bin/clear 
+alias c=cdpwd
+alias PWD $PWD
+cl
 echo "       444444444   222222222222222        SSSSSSSSSSSSSSS HHHHHHHHH     HHHHHHHHH	"
 echo "      4::::::::4  2:::::::::::::::22    SS:::::::::::::::SH:::::::H     H:::::::H	"
 echo "     4:::::::::4  2::::::222222:::::2  S:::::SSSSSS::::::SH:::::::H     H:::::::H	"
@@ -20,5 +21,6 @@ echo "          4::::4  2:::::2       222222 SSSSSSS     S:::::SHH::::::H     H:
 echo "        44::::::442::::::2222222:::::2 S::::::SSSSSS:::::SH:::::::H     H:::::::H	"
 echo "        4::::::::42::::::::::::::::::2 S:::::::::::::::SS H:::::::H     H:::::::H	"
 echo "       444444444422222222222222222222  SSSSSSSSSSSSSSS   HHHHHHHHH     HHHHHHHHH	"
-
-export PWD=${PWD:?unset var} HOME=${HOME:?unset var} PATH=$(PATH:-/bin) TERM=${TERM:-xterm-256color}
+PATH=$(PATH:?unset var)
+export PATH
+echo OK
