--- a/sys/.21shrc
+++ b/sys/.21shrc
@@ -1,11 +1,9 @@
 export HOME=${HOME:-/home}
 export HISTORY=~/.21history
 export TERM=${TERM:-xterm-256color}
-alias cl /usr/bin/clear 
+alias cl /usr/bin/clear
 alias PWD $PWD
 alias la=ls -a lq=l lz=ls
 /usr/bin/clear 
-
-PATH=${PATH:?unset var}
-export PATH
+export PATH=${PATH:?unset var}
 echo OK
