--- a/sys/.21shrc
+++ b/sys/.21shrc
@@ -1,5 +1,4 @@
-export USER=${USER:-ptruffau}
-export HOME=${HOME:-/Users/$USER}
+echo ${HISTORY:?unset var HISTORY} ${HOME:?unset var HOME} ${PWD:?unset var PWD} 
 export TERM=${TERM:-xterm-256color} 
 export PATH=${PATH:-/bin:/user/bin:/sbin:/usr/sbin:/usr/local/bin}
 alias cl /usr/bin/clear
