--- a/sys/.21shrc
+++ b/sys/.21shrc
@@ -1,4 +1,3 @@
-echo ${HISTORY:?unset var HISTORY} ${HOME:?unset var HOME} ${PWD:?unset var PWD} 
 export TERM=${TERM:-xterm-256color} 
 export PATH=${PATH:-/bin:/user/bin:/sbin:/usr/sbin:/usr/local/bin}
 alias cl /usr/bin/clear
@@ -6,3 +5,5 @@ alias PWD $PWD
 alias la=ls -a lq=l lz=ls
 /usr/bin/clear 
 echo .21shrc [done]
+echo ${HISTORY:?unset var '$HISTORY'} ${HOME:?unset var '$HOME'} ${PWD:?unset var '$PWD'} 
+val=mdr echo $val
