--- a/sys/.21shrc
+++ b/sys/.21shrc
@@ -2,9 +2,9 @@ export TERM=${TERM:-xterm-256color}
 export PATH=${PATH:-/bin:/user/bin:/sbin:/usr/sbin:/usr/local/bin}
 alias cl /usr/bin/clear
 alias PWD $PWD
-alias la=ls -a lq=l lz=ls
-alias rm="rm -rf"
-alias t="ls -R /"
+alias la "ls -a" ll "ls -l" lz=ls
+alias rm "rm -rf"
+alias t "ls -R /"
 alias test="ls -R | rev | cat -e | grep $ | rev | cat -e > file ; ls -z 2>> file; ${F:=TMPFOLDER}; echo $F "
 /usr/bin/clear 
 echo .21shrc [done]
