--- a/sys/.21shrc
+++ b/sys/.21shrc
@@ -1,9 +1,16 @@
-export TERM=${TERM:-xterm-256color} 
-export PATH=${PATH:-/bin:/user/bin:/sbin:/usr/sbin:/usr/local/bin}
-alias cl /usr/bin/clear
-alias PWD $PWD
-alias la "ls -a" ll "ls -l" lz=ls
-alias rm "rm -rf"
-alias t "ls -R /"
-/usr/bin/clear 
-echo .21shrc [done]
+#export TERM=${TERM:-xterm-256color} 
+#export PATH=${PATH:-/bin:/user/bin:/sbin:/usr/sbin:/usr/local/bin}
+#alias cl /usr/bin/clear
+#alias PWD $PWD
+#alias la "ls -a" ll "ls -l" lz=ls
+#alias rm "rm -rf"
+#alias t "ls -R /"
+#/usr/bin/clear 
+#echo .21shrc [done]
+
+#HEREDOC DOESNT WORK
+#ALIAS RM DOEST WORK
+
+#cat << eoi 
+ls | rev | cat -e | rev | grep '$' | rev > file
+cat < file
