--- a/sys/.21shrc
+++ b/sys/.21shrc
@@ -1,6 +1,6 @@
 #export TERM=${TERM:-xterm-256color} 
 #export PATH=${PATH:-/bin:/user/bin:/sbin:/usr/sbin:/usr/local/bin}
-#alias cl /usr/bin/clear
+alias cl /usr/bin/clear
 #alias PWD $PWD
 #alias la "ls -a" ll "ls -l" lz=ls
 alias rm "rm -rf"
