--- a/sys/.21shrc
+++ b/sys/.21shrc
@@ -1,11 +1,10 @@
-#export TERM=${TERM:-xterm-256color} 
-#export PATH=${PATH:-/bin:/user/bin:/sbin:/usr/sbin:/usr/local/bin}
+export TERM=${TERM:-xterm-256color} 
+export PATH=${PATH:-/bin:/user/bin:/sbin:/usr/sbin:/usr/local/bin}
 alias cl /usr/bin/clear
-#alias PWD $PWD
-#alias la "ls -a" ll "ls -l" lz=ls
+alias la "ls -a" ll "ls -l" lz=ls
 alias rm "rm -rf"
 /usr/bin/clear 
 echo .21shrc [done]
-
 #HEREDOC DOESNT WORK
-#ALIAS RM DOEST WORK
+
+[H[2J.21shrc	[done]
