--- a/sys/.21shrc
+++ b/sys/.21shrc
@@ -2,6 +2,9 @@ export TERM=${TERM:-xterm-256color}
 export PATH=${PATH:-/bin:/user/bin:/sbin:/usr/sbin:/usr/local/bin}
 alias cl /usr/bin/clear
 alias la "ls -a" ll "ls -l" lz=ls
-alias rm "rm -rf"
-/usr/bin/clear 
-echo .21shrc [done]
+#/usr/bin/clear
+setenv TEST=aaaZamerinebb
+echo ${TEST}
+echo ${TEST%b}
+echo ${TEST%%b}
+echo hereiam
