--- a/sys/.21shrc
+++ b/sys/.21shrc
@@ -4,20 +4,31 @@ alias cl /usr/bin/clear
 alias la "ls -a" ll "ls -l" lz=ls
 alias gitall "git add -A && git commit -m 'gitall' && git push"
 /usr/bin/clear
+echo '        :::      ::::::::	      ::::::::  :::    :::	'
+echo '      :+:      :+:    :+:	    :+:    :+: :+:    :+:	'
+echo '    +:+ +:+         +:+  	   +:+        +:+    +:+	'
+echo '  +#+  +:+       +#+     	  +#++:++#++ +#++:++#++		'
+echo '+#+#+#+#+#+   +#+        	        +#+ +#+    +#+		'
+echo '     #+#    #+#          	#+#    #+# #+#    #+#		'
+echo '    ###   ########.fr    	########  ###    ###		'
+echo ''
 
-
-        :::      ::::::::	      ::::::::  :::    ::: 
-      :+:      :+:    :+:	    :+:    :+: :+:    :+:  
-    +:+ +:+         +:+  	   +:+        +:+    +:+   
-  +#+  +:+       +#+     	  +#++:++#++ +#++:++#++    
-+#+#+#+#+#+   +#+        	        +#+ +#+    +#+     
-     #+#    #+#          	#+#    #+# #+#    #+#   
-    ###   ########.fr    	########  ###    ###  
-
-
-
-
-
-
-   
-     
+cd
+cd -
+cd /
+cd -
+cd /var
+cd ewrger wfg
+cd qwer
+env
+env -i HOME=/ cd
+env -u PATH -i ls
+setenv 
+setenv test=lol test mdr test
+echo $test
+unsetenv
+unsetenv test PATH HOME SHLVL
+clear
+ls
+/bin/ls
+/bin/ls /bin $HOME ~/21sh/ /dev /home
